--- a/.github/workflows/run-tests-cloud.yml
+++ b/.github/workflows/run-tests-cloud.yml
@@ -7,11 +7,11 @@ on:
     branches:
       - main
   pull_request:
-    types: [labeled]
+    types: [opened, labeled, synchronize, reopened]
 
 jobs:
   cloud:
-    if: github.event.label.name == 'tests:run-cloud' || github.event_name == 'push'
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'tests:run-cloud'))
     runs-on: ubuntu-latest
     defaults:
       run:
