--- a/.github/workflows/run-tests-head.yml
+++ b/.github/workflows/run-tests-head.yml
@@ -7,11 +7,11 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
   pull_request:
-    types: [labeled]
+    types: [opened, labeled, synchronize, reopened]
 
 jobs:
   test-ch-head:
-    if: github.event.label.name == 'tests:run-head' || github.event_name == 'push' || github.event_name == 'schedule'
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'tests:run-head'))
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
