--- a/.github/workflows/run-tests-head.yml
+++ b/.github/workflows/run-tests-head.yml
@@ -29,5 +29,7 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Tests
+        env:
+          TESTCONTAINERS_RYUK_DISABLED: "true"
         run: |
           CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
