--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,6 +14,8 @@ jobs:
   test:
     runs-on: [self-hosted, style-checker-aarch64]
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         go:
           - "1.24"
