--- a/.github/workflows/run-tests-cloud.yml
+++ b/.github/workflows/run-tests-cloud.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+      - jwt-auth
   workflow_dispatch:
   pull_request:
     types: [opened, labeled, synchronize, reopened]
