add test to lock FixedString(0) behavior
This makes sure any internal state corruption leads to FixedString(0)
wouldn't panic when trying to append value to the column.

This is just there for defensive purpose. Originally you cannot create
such column FixedString(0) because Clickhouse server already rejects
such columns with zero size

Signed-off-by: Kaviraj <kavirajkanagaraj@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@
 version: '3.9'
 services:
   clickhouse:
+    environment:
+      CLICKHOUSE_SKIP_USER_SETUP: 1
     networks:
       - clickhouse
     container_name: clickhouse
