chore: Update contributing guide and docker compose stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
----
-version: '3.9'
 services:
   clickhouse:
     environment:
@@ -12,5 +10,18 @@ services:
       - 127.0.0.1:8123:8123
       - 127.0.0.1:9000:9000
       - 127.0.0.1:9009:9009
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:8123/ping",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 networks:
   clickhouse: null
