--- a/.github/workflows/run-tests-head.yml
+++ b/.github/workflows/run-tests-head.yml
@@ -31,5 +31,6 @@ jobs:
       - name: Tests
         env:
           TESTCONTAINERS_RYUK_DISABLED: "true"
+          GOTOOLCHAIN: "local"
         run: |
           CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
